期刊、点赞 handler 以及它们的 model
