# handler/book/book.go
@@ -3,14 +3,15 @@ package book
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/Away0x/7yue_api_server/handler"
-		"github.com/Away0x/7yue_api_server/utils"
+	"github.com/Away0x/7yue_api_server/utils/validate"
 	"github.com/Away0x/7yue_api_server/constant/errno"
+	"github.com/Away0x/7yue_api_server/model"
 )
 
 // 获取热门书籍(概要)
 func HotList(c *gin.Context) {
 	// 1. 响应数据
-	handler.SendResponse(c, nil, "ok")
+	handler.SendResponse(c, nil, []interface{}{})
 }
 
 // 获取书籍短评
@@ -47,8 +48,17 @@ func FavorStatus(c *gin.Context) {
 
 // 获取热搜关键字
 func HotKeyword(c *gin.Context) {
-	// 1. 响应数据
-	handler.SendResponse(c, nil, "ok")
+	// 1. 获取数据
+	words, err := model.GetAllHotKeyWord()
+	if err != nil {
+		handler.SendResponse(c, errno.NoResourceError, nil)
+		return
+	}
+
+	// 2. 响应数据
+	handler.SendResponse(c, nil, gin.H{
+		"hot": words,
+	})
 }
 
 // 新增短评
