# handler/user/user.go
@@ -12,14 +12,6 @@ func Index(c *gin.Context) {
 }
 
 // 注册
-// @Summary 注册
-// @Description注册
-// @Tags user
-// @Accept json
-// @Produce json
-// @Param user body string true "Create a new user"
-// @Success 200 {object} interface{} "{"code":0,"message":"OK","data":{"username":"kong"}}"
-// @Router /user/register [post]
 func Register(c *gin.Context) {
 	// 1. 响应数据
 	handler.SendResponse(c, nil, "ok")
